# hajimu_engine_physics

./: .gitignore  CMakeLists.txt  Makefile  README.md  hajimu.json  release.sh
.github/workflows/: build.yml
include/: phys.h
src/: phys.c  plugin.c
